Added demo links in project cards

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- import poppins font here -->
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
 		/>
-		<title>JPranayS</title>
+		<title>Pranay's portfolio</title>
 	</head>
 	<body>
 		<div id="root"></div>
