Added scroll-snap feature,updated resume

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 			href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
 		/>
 		<title>Pranay's portfolio</title>
+		<style>
+			#root {
+				max-height: 100vh;
+				overflow-y: scroll;
+				scroll-snap-type: y mandatory;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
