fixed scroll padding issue

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				max-height: 100vh;
 				overflow-y: scroll;
 				scroll-snap-type: y mandatory;
+				scroll-padding-top: 10vh;
 			}
 		</style>
 	</head>
