chore: Update styles to remove unnecessary scroll-snap-align property

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 		<title>Pranay's portfolio</title>
 		<style>
 			#root {
-				max-height: 100vh;
-				overflow-y: scroll;
-				scroll-snap-type: y mandatory;
-				scroll-padding-top: 10vh;
+				height: 100%;
 			}
 		</style>
 	</head>
